--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "sonner": "^1.0.3"
   },
   "devDependencies": {
