--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.12.1",
     "gsap": "^3.12.2",
     "next": "13.5.6",
     "react": "^18",
