--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.2",
+    "googleapis": "^129.0.0",
     "gsap": "^3.12.2",
     "next": "13.5.6",
     "react": "^18",
